# ws_px4_controls

./: optimized_path.txt  uav_wp.csv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/px4_msgs/include/px4_msgs/px4_msgs/msg/detail/: battery_status__functions.c  battery_status__struct.h  battery_status__type_support.cpp
install/px4_msgs/share/px4_msgs/: local_setup.sh  package.sh
install/px4_msgs/share/px4_msgs/msg/: BatteryStatus.idl
install/px4_ros_com/lib/px4_ros_com/: cli_pose_command  debug_vect_advertiser  offboard_control_srv  sensor_combined_listener  vehicle_gps_position_listener
install/px4_ros_com/share/ament_index/resource_index/package_run_dependencies/: px4_ros_com
install/px4_ros_com/share/px4_ros_com/: package.sh
install/uav_controller_pkg/lib/uav_controller_pkg/: offboard_control_node
install/uav_controller_pkg/share/uav_controller_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/uav_controller_pkg/: CMakeLists.txt  package.xml
src/uav_controller_pkg/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/uav_controller_pkg/install/uav_controller_pkg/share/uav_controller_pkg/: package.bash  package.zsh
src/uav_controller_pkg/log/: latest_build
src/uav_controller_pkg/src/: offboard_control_node.cpp  uav_controller.cpp
